# russian-address-parser

./: .gitignore  LICENSE  russian-address-parser.cabal
notes/: Misc.nt  cities-list.js  theory.nt  todo.nt
src/Address/: Char.hs  Cities.hs  Digit.hs  Main.hs  Number.hs  String.hs  Symbol.hs  Types.hs  Utils.hs  _Test.hs
