name:           russian-address-parser
version:        0.1.0.0
synopsis:       Library for parsing Russian street addresses
homepage:       https://github.com/kahless/russian-address-parser
license:        MIT
license-file:   LICENSE
author:         Yevgeny Zharov
maintainer:     krantadan@mail.ru
category:       Text
build-type:     Simple
cabal-version:  >=1.10

library
  default-language: Haskell2010
  other-extensions: FlexibleContexts
  exposed-modules:
    Address.Main,
    Address.Types,
    Address.Char,
    Address.Digit,
    Address.Symbol,
    Address.Utils
  hs-source-dirs: src
  build-depends:
    base,
    parsec
