name:           russian-address-parser
version:        0.1.0.0
synopsis:       Library for parsing Russian street addresses
homepage:       https://github.com/kahless/russian-address-parser
license:        MIT
license-file:   LICENSE
author:         Yevgeny Zharov
maintainer:     krantadan@mail.ru
category:       Text
build-type:     Simple
cabal-version:  >=1.10

library
  default-language: Haskell2010
  other-extensions: FlexibleContexts
  exposed-modules:
      Address.Main
    , Address.Types
    , Address.Char
    , Address.Number
    , Address.String
    , Address.Cities
    , Address.Utils
  hs-source-dirs: src
  build-depends:
      base
    , parsec
    , containers

executable test
  default-language: Haskell2010
  other-extensions: FlexibleContexts
  hs-source-dirs: src
  main-is: Address/_Test.hs
  build-depends:
      base
    , parsec
    , containers
